--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>{% block title %}Teleprompter{% endblock %}</title>
+    <title>{% block title %}Tele-Prompter{% endblock %}</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
